centered logo on mobile + minor fixes

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ header{
 .logo{
     margin: 0;
     padding: 10px;
+    padding-left: 5rem;
 }
 .half-logo{
     color: black;
@@ -86,7 +87,6 @@ nav li {
 nav a {
     text-decoration: none;
     color: white;
-    font-size: 1rem;
     text-transform: uppercase;
 }
 
@@ -135,7 +135,7 @@ nav a:hover {
     nav li {
         margin-left: 4em;
         margin-bottom: 0;
-        font-size: 0.2rem;
+        font-size: 1.4rem;
     }
     nav a::before{
         content: '';
